Correct more link spacing for grid and alternate

--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -300,6 +300,10 @@
 			margin-bottom: 0;
 		}
 
+		.more-link-wrapper {
+			padding-top: 0; 
+		}
+
 		.more-link {
 		    display: block;
 		    text-align: left;
@@ -401,24 +405,33 @@
 				text-align: left;
 			}
 
+			p:only-of-type,
+			p:last-of-type {
+				margin-bottom: 0;
+			}			
+
+			.more-link-wrapper {
+				padding-top: 0; 
+			}
+
 			.more-link {
 			    display: block;
-			    color: $color__primary-accent;
-			    font-size: 0.9333em;
 			    text-align: left;
 			    text-decoration: none;
 			    text-transform: none;
-			    padding-top: 5px;
-
-				&:hover {
-					color: $color__text-medium;
-				}
+				padding-top: 5px;
 
 			    .more-text {
 					border: none;
+					color: $color__primary-accent;
 	    			font-family: $font__main;
+	    			font-size: 1.0769em; 
 	    			letter-spacing: normal;
 	    			padding: 0;
+	    			
+					&:hover {
+						color: $color__text-medium;
+					}    			
 
 	    			&:after {
 	    				content: '\279E';
